<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.co.gresearch.siembol</groupId>
    <artifactId>siembol</artifactId>
    <name>siembol</name>
    <version>2.2.9-SNAPSHOT</version>
    <description>A scalable, advanced security analytics framework based on open-source big data technologies.</description>
    <inceptionYear>2019</inceptionYear>
    <url>https://siembol.io/</url>
    <licenses>
        <license>
            <name>Apache 2.0 License</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com/g-research/siembol.git</connection>
        <developerConnection>scm:git:ssh://github.com:g-research/siembol.git</developerConnection>
        <url>https://github.com/g-research/siembol/tree/${project.scm.tag}</url>
        <tag>main</tag>
    </scm>
    <developers>
        <developer>
            <id>mariannovotny</id>
            <name>Marian Novotny</name>
            <email>Marian.Novotny@gresearch.co.uk</email>
        </developer>
    </developers>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/G-Research/siembol/issues</url>
    </issueManagement>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java_test_version>13</java_test_version>
        <maven.compiler.release>11</maven.compiler.release>
        <maven_compiler_version>3.8.1</maven_compiler_version>
        <jackson_version>2.13.1</jackson_version>
        <junit_version>4.13.2</junit_version>
        <mockito_version>4.2.0</mockito_version>
        <shade_version>3.2.4</shade_version>
        <curator_version>5.2.0</curator_version>
        <curator_test_version>2.13.0</curator_test_version>
        <storm_version>2.3.0</storm_version>
        <kafka_storm_version>2.8.1</kafka_storm_version>
        <kafka_version>2.8.1</kafka_version>
        <kafka_junit_version>4.2.0</kafka_junit_version>
        <spark_version>2.2.0</spark_version>
        <hadoop_version>3.3.1</hadoop_version>
        <json_schema_validator_version>2.2.14</json_schema_validator_version>
        <json_schema_core_version>1.2.14</json_schema_core_version>
        <spring_boot_version>2.6.2</spring_boot_version>
        <guava_version>31.0.1-jre</guava_version>
        <storm_guava_version>24.1.1-jre</storm_guava_version>
        <springdoc_openapi_version>1.6.3</springdoc_openapi_version>
        <commons_beanutils_version>1.9.4</commons_beanutils_version>
        <multiline_string_version>0.1.2</multiline_string_version>
        <http_client_version>4.5.13</http_client_version>
        <slf4j_version>1.7.32</slf4j_version>
        <commons_lang3_version>3.12.0</commons_lang3_version>
        <commons_io_version>2.11.0</commons_io_version>
        <gson_version>2.8.9</gson_version>
        <kubernetes_client_version>5.11.1</kubernetes_client_version>
    </properties>
    <modules>
        <module>siembol-common</module>
        <module>parsing</module>
        <module>alerting</module>
        <module>enriching</module>
        <module>responding</module>
        <module>config-editor</module>
        <module>deployment/storm-topology-manager</module>
    </modules>
    <packaging>pom</packaging>
    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <name>Central Repository OSSRH</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>bintray</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven_compiler_version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-processing</arg>
                    </compilerArgs>
                    <showWarnings>true</showWarnings>
                </configuration>
                <executions>
                    <execution>
                        <id>default-testCompile</id>
                        <configuration>
                            <release>${java_test_version}</release>
                            <compilerArgs>--enable-preview</compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>3.0.0-M5</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <reuseForks>true</reuseForks>
                    <forkedProcessExitTimeoutInSeconds>60</forkedProcessExitTimeoutInSeconds>
                    <argLine>--illegal-access=permit</argLine>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <stagingProgressTimeoutMinutes>60</stagingProgressTimeoutMinutes>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
